# ros2-robot-control-and-simulation

./: README.md
src/autonomous_robot_core/: CMakeLists.txt  package.xml
src/autonomous_robot_core/launch/: online_async_launch.py  rsp.launch.py  sim.launch.py
src/autonomous_robot_core/src/: sensor_node.cpp  simple_brain.cpp
src/autonomous_robot_core/urdf/: robot.urdf
